--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -1,7 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+	android:orientation="vertical"
+	android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</RelativeLayout>
+	
+	<TextView
+		android:text="Input Values Accordingly"
+		android:textSize="22sp"
+		android:textStyle="bold"
+		android:gravity="center"
+		android:layout_marginTop="16dp"
+		android:layout_marginBottom="20dp"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		/>
+	
+	<EditText
+		android:id="@+id/incomePerHourEditText"
+		android:layout_marginRight="20dp"
+		android:layout_marginLeft="20dp"
+		android:inputType="number"
+		android:imeOptions="actionNext"
+		android:hint="$ Per Hour"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+
+	<EditText
+		android:id="@+id/wordHoursEditText"
+		android:layout_marginRight="20dp"
+		android:layout_marginLeft="20dp"
+		android:inputType="number"
+		android:imeOptions="actionNext"
+		android:hint="Work Hours Per Day"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+
+	<EditText
+		android:id="@+id/taxRateEditText"
+		android:layout_marginRight="20dp"
+		android:layout_marginLeft="20dp"
+		android:inputType="number"
+		android:imeOptions="actionNext"
+		android:hint="Tax Rate (%)"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+
+	<EditText
+		android:id="@+id/savingsRateEditText"
+		android:layout_marginRight="20dp"
+		android:layout_marginLeft="20dp"
+		android:inputType="number"
+		android:imeOptions="actionNext"
+		android:hint="Savings Rate (%)"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
+	
+	<Button
+		android:id="@+id/calculateButton"
+		android:text="Calculate"
+		android:layout_marginTop="30dp"
+		android:layout_gravity="center_horizontal"
+		android:layout_width="300dp"
+		android:layout_height="50dp"/>
+	
+</LinearLayout>
