--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -7,7 +7,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 	
-	<TextView
+	
+	
+	
+	<ScrollView
+		android:scrollbars="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
+		<LinearLayout
+			android:orientation="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+
+			<TextView
 		android:text="Input Values Accordingly"
 		android:textSize="22sp"
 		android:textStyle="bold"
@@ -17,77 +30,82 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		/>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<EditText
+				android:id="@+id/incomePerHourEditText"
+				android:layout_marginRight="20dp"
+				android:layout_marginLeft="20dp"
+				android:inputType="number"
+				android:imeOptions="actionNext"
+				android:hint="$ Per Hour"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<EditText
+				android:id="@+id/wordHoursEditText"
+				android:layout_marginRight="20dp"
+				android:layout_marginLeft="20dp"
+				android:inputType="number"
+				android:imeOptions="actionNext"
+				android:hint="Work Hours Per Day"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<EditText
+				android:id="@+id/taxRateEditText"
+				android:layout_marginRight="20dp"
+				android:layout_marginLeft="20dp"
+				android:inputType="number"
+				android:imeOptions="actionNext"
+				android:hint="Tax Rate (%)"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<com.google.android.material.textfield.TextInputLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
+
+				<EditText
+				android:id="@+id/savingsRateEditText"
+				android:layout_marginRight="20dp"
+				android:layout_marginLeft="20dp"
+				android:inputType="number"
+				android:imeOptions="actionDone"
+				android:hint="Savings Rate (%)"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+			</com.google.android.material.textfield.TextInputLayout>
+
+			<Button
+				android:id="@+id/calculateButton"
+				android:text="Calculate"
+				android:layout_marginTop="30dp"
+				android:layout_gravity="center_horizontal"
+				android:layout_width="300dp"
+				android:layout_height="50dp"/>
+			
+		</LinearLayout>
+		
+	</ScrollView>
 	
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<EditText
-		android:id="@+id/incomePerHourEditText"
-		android:layout_marginRight="20dp"
-		android:layout_marginLeft="20dp"
-		android:inputType="number"
-		android:imeOptions="actionNext"
-		android:hint="$ Per Hour"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
-	
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<EditText
-		android:id="@+id/wordHoursEditText"
-		android:layout_marginRight="20dp"
-		android:layout_marginLeft="20dp"
-		android:inputType="number"
-		android:imeOptions="actionNext"
-		android:hint="Work Hours Per Day"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
-	
-	</com.google.android.material.textfield.TextInputLayout>
-
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<EditText
-		android:id="@+id/taxRateEditText"
-		android:layout_marginRight="20dp"
-		android:layout_marginLeft="20dp"
-		android:inputType="number"
-		android:imeOptions="actionNext"
-		android:hint="Tax Rate (%)"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
-
-	</com.google.android.material.textfield.TextInputLayout>
-
-	<com.google.android.material.textfield.TextInputLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<EditText
-		android:id="@+id/savingsRateEditText"
-		android:layout_marginRight="20dp"
-		android:layout_marginLeft="20dp"
-		android:inputType="number"
-		android:imeOptions="actionDone"
-		android:hint="Savings Rate (%)"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
-
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<Button
-		android:id="@+id/calculateButton"
-		android:text="Calculate"
-		android:layout_marginTop="30dp"
-		android:layout_gravity="center_horizontal"
-		android:layout_width="300dp"
-		android:layout_height="50dp"/>
 	
 </LinearLayout>
