--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -104,6 +104,7 @@
 				android:layout_height="50dp"/>
 			
 			<RelativeLayout
+				android:visibility="invisible"
 				android:id="@+id/resultLayout"
 				android:paddingLeft="20dp"
 				android:paddingRight="20dp"
